<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_container_item"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/blue_clear"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_4dp">

        <ImageView
            android:id="@+id/iv_photo_item"
            android:layout_width="@dimen/size_img_card_item"
            android:layout_height="@dimen/size_img_card_item"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:background="@drawable/contour_img_item_card"
            android:contentDescription="@string/todo"
            android:padding="@dimen/dimens_4dp"
            android:src="@drawable/playa_la_roca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:gravity="center"
            android:background="@drawable/contour_textview_card"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_photo_item"
            app:layout_constraintTop_toTopOf="@+id/iv_photo_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_8dp"
                android:text="@string/autor"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_name_user_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_4dp"
                android:text="@string/user"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/contour_textview_card"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_4dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/iv_photo_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_photo_item"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:layout_marginStart="@dimen/dimens_8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_comment_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_4dp"
                android:text="@string/data_comment"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>